Bug 203052 - pw command does not work as expected in STABLE 10.2
Summary: pw command does not work as expected in STABLE 10.2
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 10.2-STABLE
Hardware: Any Any
: --- Affects Many People
Assignee: Baptiste Daroussin
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-09-11 20:09 UTC by lenzi.sergio
Modified: 2015-11-15 17:22 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lenzi.sergio 2015-09-11 20:09:14 UTC
the pw command does not work as expected.


# finger pulse

===================================================
Login: pulse          			Name: PulseAudio System User
Directory: /nonexistent             	Shell: /usr/sbin/nologin
No Mail.
No Plan.
===================================================

# pw usermod pulse -d /var/run/pulse
# finger pulse

===================================================
Login: pulse          			Name: PulseAudio System User
Directory: /nonexistent             	Shell: /usr/sbin/nologin
No Mail.
No Plan.
===================================================

it should had changed Directory to /var/run/pulse

Solution:
roll back to 2015-08-23
with the command
cd /usr/src/usr.sbin/pw
svn up -r '{2015-08-23}'

make
make install

Than the system works as expected
Comment 1 commit-hook freebsd_committer freebsd_triage 2015-09-12 08:24:33 UTC
A commit references this bug:

Author: bapt
Date: Sat Sep 12 08:24:26 UTC 2015
New revision: 287701
URL: https://svnweb.freebsd.org/changeset/base/287701

Log:
  Regression: fix pw usermod -d

  Mark the user has having been edited if -d option is passed to usermod and
  so the request change of home directory actually happen

  PR:		203052
  Reported by:	lenzi.sergio@gmail.com
  MFC after:	2 days

Changes:
  head/usr.sbin/pw/pw_user.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-09-14 05:37:50 UTC
A commit references this bug:

Author: bapt
Date: Mon Sep 14 05:37:33 UTC 2015
New revision: 287769
URL: https://svnweb.freebsd.org/changeset/base/287769

Log:
  MFC: r287701

  Regression: fix pw usermod -d

  Mark the user has having been edited if -d option is passed to usermod and
  so the request change of home directory actually happen

  PR:		203052
  Reported by:	lenzi.sergio@gmail.com

Changes:
_U  stable/10/
  stable/10/usr.sbin/pw/pw_user.c