MFC: r287701

Regression: fix pw usermod -d

Mark the user has having been edited if -d option is passed to usermod and
so the request change of home directory actually happen

PR:		203052
Reported by:	lenzi.sergio@gmail.com

Former-commit-id: 04cc7239d9ced69a2dc754a9bc62fb0e25c2de7f